--- a/src/app/proveedor/proveedor.component.html
+++ b/src/app/proveedor/proveedor.component.html
@@ -1,3 +1,6 @@
-<p>
-  proveedor works!
-</p>
+<app-menu></app-menu>
+<div class="container-fluid main">
+  <div class="form-row">
+    <h4 class="mt-3">Gestion de proveedores</h4>
+  </div>
+</div>
