--- a/src/app/informe-diario/informe-diario.component.html
+++ b/src/app/informe-diario/informe-diario.component.html
@@ -73,7 +73,7 @@
             <i class="fas fa-search"></i>
           </button>
           <!-- Button trigger modal -->
-          <button type="button"  class="btn btn-secondary btn-sm" data-toggle="modal">
+          <button type="button"  class="btn btn-secondary btn-sm" data-toggle="modal" (click)="imprimirInforme(ordenes)">
             <i class="far fa-file-pdf"></i>
           </button>
         </th>
@@ -88,4 +88,10 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="col col-ms-1">
+    <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
+
+    </a>
+</div>
 </div>
