--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,8 @@
       </div>
     </div>
   </div>
-  <div class="fixed-bottom foother footer " >
+  <div class="fixed-bottom foother footer mr-4" >
+    <img src="../../assets/images/nice.jpeg " height="100px" width="240px" />
     <h6>Soporte: 3112864974 - 3185222474</h6>
     <h6>info@effectivesoftware.com.co</h6>
   </div>
