--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -73,3 +73,9 @@ button{
     text-align: right;
     color: white;
 }
+
+.nice{
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 3px #848484;
+}
