se agrega envio de factguracion electronica y correccion en impresion

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,8 @@
         <div class="form-group" id="contrasena-group">
           <input type="password" class="form-control" #contrasena placeholder="Contraseña" (keydown.enter)="loginUsuario(user.value,contrasena.value)" required/>
         </div>
-        <button type="button" class="btn btn-primary" (click)="loginUsuario(user.value,contrasena.value)" ><i class="fas fa-sign-in-alt"></i> Ingresar</button>
+        <button type="button" class="btn btn-primary ml-2" (click)="loginUsuario(user.value,contrasena.value)" ><i class="fas fa-sign-in-alt"></i> Ingresar</button>
+    
       </form>
       <div class="col-12 forgot">
         <a href="#">Recordar contraseña</a>
