--- a/src/app/movimiento-mes/movimiento-mes.component.html
+++ b/src/app/movimiento-mes/movimiento-mes.component.html
@@ -160,28 +160,36 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="form-group col-md-8 col-sm-2">
+        <div class="form-group col-md-4 col-sm-2">
             <input name="CodigoBarrasPV" #CodigoBarrasPV placeholder="Cod. Barras" class="form-control"
                 id="CodigoBarrasPV" (keydown.enter)="enterTecla(CodigoBarrasPV)" (blur)="ocultarCodigoBarras()"
                 (keydown.esc)="scapeTecla(CodigoBarrasPV)">
         </div>
+          <div class="form-group col-md-5 col-sm-2">  
+            <input name="crearProductoPV" #crearProductoPV placeholder="El producto no existe, Desea Crearlo? S/N" class="form-control"
+            id="crearProductoPV" (keydown.enter)="enterTecla(crearProductoPV)" (blur)="ocultarCrearProducto()"
+            (keydown.esc)="scapeTecla(crearProductoPV)">
+          </div>
     </div>
     <div class="form-row">
         <div class="form-group col-sm-2 d-none" id="divCodigo" #divCodigo>
+            Código del producto
             <input name="codigoPV" #codigoPV placeholder="Código Prod." class="form-control" id="codigoPV"
                 (keydown.enter)="enterTecla(codigoPV)" (keydown.esc)="scapeTecla(codigoPV)">
         </div>
         <div class="form-group col-sm-4 d-none" id="divArticulo" #divArticulo>
+            Nombre producto
             <input list="articulos" name="articuloPV" #articuloPV placeholder="Articulo" class="form-control"
                 id="articuloPV" (keydown.enter)="enterTecla(articuloPV)" (change)="articuloSelect(articuloPV)"
                 (keydown.esc)="scapeTecla(articuloPV)">
             <datalist id="articulos">
                 <option *ngFor="let producto of productosAll" [value]="producto.nombre">
-                    Costo:{{producto.costo}} Cantidad:{{producto.cantidad}} id:{{producto.producto_id}}
+                    Costo:{{producto.costo}} | Publico:{{producto.costo_publico}} | Cantidad:{{producto.cantidad}} | id:{{producto.producto_id}}
                 </option>
             </datalist>
         </div>
         <div class="form-group col-sm-2 d-none" id="divCantidad" #divCantidad>
+            Cantidad
             <input name="cantidadPV" #cantidadPV placeholder="Cantidad" class="form-control" id="cantidadPV"
                 (keydown.enter)="enterTecla(cantidadPV)" (keydown.esc)="scapeTecla(cantidadPV)">
             <input name="precioPV" #precioPV placeholder="$ Precio" class="form-control d-none" id="precioPV"
@@ -189,11 +197,13 @@
 
         </div>
         <div class="form-group col-sm-2 d-none" id="divUnitario" #divUnitario>
+            Costo Unitario
             <input type="text" class="form-control mb-2 mr-sm-2" placeholder="$ Costo Unitario" id="unitarioPV"
                 name="unitarioPV" #unitarioPV  (keydown.enter)="enterTecla(unitarioPV)"
                 (keydown.esc)="scapeTecla(unitarioPV)">
         </div>
         <div class="form-group col-sm-2 d-none" id="divParcial" #divParcial>
+            Costo Publico
             <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Unitario Venta" id="unitarioVentaPV"
             (keydown.enter)="enterTecla(unitarioVentaPV)" (keydown.esc)="scapeTecla(unitarioVentaPV)"
             name="unitarioVentaPV" #unitarioVentaPV>
