--- a/src/app/buscar-documentos/buscar-documentos.component.html
+++ b/src/app/buscar-documentos/buscar-documentos.component.html
@@ -53,7 +53,8 @@
       <div class="form-row">
         <div class="form-group col-md-6 col-sm-6">
           Cliente
-          <input list="browsers" name="clientePV1" #clientePV placeholder="Cliente" class="form-control" id="clientePV1">
+          <input list="browsers" name="clientePV1" #clientePV placeholder="Cliente" class="form-control"
+            id="clientePV1">
           <datalist id="browsers">
             <option *ngFor="let cliente of clientes" [value]="cliente.nombre">
               Identificación: {{cliente.documento}} id:{{cliente.cliente_id}}
@@ -102,12 +103,13 @@
                 <i class="fas fa-search"></i>
               </button>
               <!-- Button trigger modal -->
-              <button type="button" class="btn btn-primary btn-sm" [disabled]="!copiaFacturaActivo" (click)="imprimirCopia(documento)"
-                title="Imprimir Copia"  >
+              <button type="button" class="btn btn-primary btn-sm" [disabled]="!copiaFacturaActivo"
+                (click)="imprimirCopia(documento)" title="Imprimir Copia">
                 <i class="fas fa-print"></i>
               </button>
-              <button type="button" class="btn btn-primary btn-sm" [disabled]="!anularFacturaActivo" title="Anular"
-                data-toggle="modal" data-target="#buscarFacturaModal">
+              <button type="button" class="btn btn-primary btn-sm" [disabled]="!anularFacturaActivo"
+                title="Crear nota crédito/débito" data-toggle="modal" data-target="#notaModal"
+                (click)="detalleDocumento(documento)">
                 <i class="far fa-trash-alt"></i>
               </button>
               <button type="button" class="btn btn-primary btn-sm" [disabled]="!cambioFechaActivo" title="Cambiar fecha"
@@ -144,7 +146,7 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{documentoSelect.consecutivo_dian}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
@@ -152,7 +154,7 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{documentoSelect.documento_id}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
@@ -160,7 +162,7 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{documentoSelect.fecha_registro| date: 'dd/MM/yyyy'}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
@@ -168,7 +170,7 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{formatearNumber(documentoSelect.total)}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
@@ -176,7 +178,7 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{formatearNumber(documentoSelect.saldo)}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
@@ -184,15 +186,15 @@
             </div>
             <div class="form-group col-md-4 col-sm-1">
               {{nombreClienteFun(documentoSelect.cliente_id)}}
-            </div>  
+            </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-1">
               <b>Proveedor: </b>
             </div>
             <div class="form-group col-md-4 col-sm-1">
-             
-            </div>  
+
+            </div>
           </div>
           Detalle Factura
           <table class="table table-hover">
@@ -204,22 +206,127 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of itemsFactura">         
+              <tr *ngFor="let item of itemsFactura">
                 <td>{{item.descripcion}}</td>
                 <td>{{item.cantidad}}</td>
                 <td>{{formatearNumber(item.parcial)}}</td>
-               
+
               </tr>
             </tbody>
           </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="closeModal()" >Cerrar</button>
+          <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="notaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Crear Nota Crédito/Débito</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-8 col-sm-1">
+              <b>Factura relacionada: </b>
+            </div>
+            <div class="form-group col-md-4 col-sm-1">
+              {{documentoSelect.consecutivo_dian}}
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-8 col-sm-1">
+              <b># Interno Factura relacionada: </b>
+            </div>
+            <div class="form-group col-md-4 col-sm-1">
+              {{documentoSelect.documento_id}}
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-8 col-sm-1">
+              <b>Total Nota: </b>
+            </div>
+            <div class="form-group col-md-4 col-sm-1">
+              {{formatearNumber(documentoSelect.total)}}
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12 col-sm-1">
+              Descripción corrección: 
+            </div>
+            <div class="form-group col-md-12 col-sm-1">
+              <textarea class="form-control " id="observacion" #observacion
+                placeholder="Descripción corrección"></textarea>
+            </div>
+          </div>
+          <div class="form-row">
+           
+            <div class="form-group col-sm-8" >
+              Articulo
+              <input list="articulos" name="articuloBuscar" #articuloBuscar placeholder="Articulo" class="form-control"
+                id="articuloBuscar" (change)="articuloSelect(articuloBuscar) ">
+            </div>
+            <div class="form-group col-md-3 col-sm-1">
+              Cantidad
+              <input name="cantidadNota" #cantidadNota placeholder="Cantidad" class="form-control">
+            </div>
+            <div class="form-group col-md-1 col-sm-1">
+              <button type="button" class="btn btn-primary mt-4" title="Adjuntar producto"
+              (click)="adjuntarProducto(cantidadNota) "><i class="fas fa-plus"></i></button>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-1">
+            
+              <button type="button" class="btn btn-primary mr-1" (click)="confirmarNota(observacion)">Confirmar</button>
+              <button type="button" class="btn btn-secondary" (click)="cerrarNota()">Salir</button>
+            </div>
+          </div>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Opciones</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Valor Uni.</th>
+                <th scope="col">Valor Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of itemsFactura">
+                <th scope="row">
+                  <button type="button" id="d_{{item.documento_detalle_id}}" #borraR class="btn btn-secondary btn-sm" title="Eliminar Producto" 
+                    (click)="borrarItem(borraR)">
+                    <i class="fas fa-trash"></i>
+                  </button>
+                </th>
+                <td>{{item.descripcion}}</td>
+                <td><input name="cantidadNota" #cantidadNota placeholder="Cantidad" class="form-control"
+                    id="c_{{item.documento_detalle_id}}" (keydown.enter)="cambioCantidad(cantidadNota)"
+                    value="{{item.cantidad}}">
+                </td>
+                <td>
+                  <input name="unitarioNota" #unitarioNota placeholder="Unitario" class="form-control"
+                    id="u_{{item.documento_detalle_id}}" (keydown.enter)="cambioUnitario(unitarioNota)"
+                    value="{{item.unitario}}">
+                </td>
+                <td>{{formatearNumber(item.parcial)}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
   <div class="col col-ms-1">
     <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
